feat(case): 案例向量召回并入path/search，RAG出口接通